sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:10: error: type mismatch;
 found   : Unit
 required: Boolean
      if(Swap=false) return else Swap=false
             ^